--- a/main.css
+++ b/main.css
@@ -3,20 +3,21 @@ body {
 }
 
 .website-nav {
+    position: relative;
     display: flex;
     gap: 5rem;
     position: fixed;
     width: 100vw;
     background-color: white;
-    justify-content: center;
     align-items: center;
 }
 
 .menu {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 h1 {
@@ -25,7 +26,8 @@ h1 {
     font-style: normal;
     font-size: 1rem;
     text-transform: uppercase;
-    padding: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     color: #1d1d1d;
 }
 
