Andromeda product page

--- a/main.css
+++ b/main.css
@@ -57,13 +57,6 @@ h4 {
     color:#1d1d1d;
 }
 
-h5 {
-    font-family: Helvetica, sans-serif;
-    font-weight: normal;
-    font-style: normal;
-    font-size: 1rem;
-}
-
 h6 {
     font-family: Helvetica, sans-serif; 
     font-weight: normal;
@@ -71,6 +64,37 @@ h6 {
     font-size: 1rem;
     padding-left: 1rem;
     color:#767676;
+}
+
+h7 {
+    font-family: Helvetica, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 3rem;
+    color: white;
+}
+
+p {
+    font-family: Helvetica, sans-serif;
+    color: white;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 1rem;
+}
+
+a {
+    color: white;
+    background-image: linear-gradient(white, white);
+    background-size: 0% 0.1em;
+    background-position-y: 100%;
+    background-position-x: 0%;
+    background-repeat: no-repeat;
+    transition: background-size 0.1s ease-in-out;
+    text-decoration: none;
+}
+
+a:hover, a:focus, a:active {
+    background-size: 100% 0.1em;
 }
 
 .website-nav a {
@@ -104,6 +128,18 @@ h6 {
     border-bottom-style: solid;
     border-bottom-width: 0.05rem;
     border-bottom-color: #767676;
+}
+
+.product-info {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+}
+
+.text-container {
+    max-width: 50vw;
 }
 
 /*
