--- a/main.css
+++ b/main.css
@@ -138,17 +138,36 @@ a:hover, a:focus, a:active {
     border-bottom-color: #767676;
 }
 
+/* product page stuff */
+
 .product-info {
     display: flex;
-    flex-wrap: wrap;
-    gap: 4rem;
+    min-height: 100vh;
+}
+
+.text-container {
+    max-width: 45%;
     padding-top: 6rem;
     padding-bottom: 6rem;
 }
 
-.text-container {
-    max-width: 50vw;
+.product-description,
+.product-price {
     padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.image-container {
+    width: 55%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    border-left: 1px solid white;
+}
+
+.image-container img {
+    height: 100vh;
+    width: 100vw;
 }
 
 .cart-button{
@@ -159,7 +178,6 @@ a:hover, a:focus, a:active {
   font-family: Helvetica, sans-serif;
   text-decoration: none;
   transition: background-size 0.01s;
-
 }
 
 .cart-button:active,
@@ -168,6 +186,45 @@ a:hover, a:focus, a:active {
     background-color: white;
     transition: 0.1s ease-in-out;
 }
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.border {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-top: 1px solid white;
+}
+
+.product-details {
+    margin-top: 2rem;
+    border-top: 1px solid white;
+}
+
+.product-details p {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.detail {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* end of product page stuff */
 
 /*
 .footer {
