--- a/main.css
+++ b/main.css
@@ -143,12 +143,13 @@ a:hover, a:focus, a:active {
 .product-info {
     display: flex;
     min-height: 100vh;
+    border-bottom: 1px solid white;
+    margin-bottom: 6rem;
 }
 
 .text-container {
     max-width: 45%;
     padding-top: 6rem;
-    padding-bottom: 6rem;
 }
 
 .product-description,
@@ -159,15 +160,18 @@ a:hover, a:focus, a:active {
 
 .image-container {
     width: 55%;
-    height: 100vh;
     margin: 0;
     padding: 0;
     border-left: 1px solid white;
+    align-self: stretch;
 }
 
 .image-container img {
-    height: 100VH;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    
 }
 
 .cart-button{
@@ -185,13 +189,6 @@ a:hover, a:focus, a:active {
 .cart-button:focus{ 
     background-color: white;
     transition: 0.1s ease-in-out;
-}
-
-.image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
 }
 
 .border {
