--- a/main.css
+++ b/main.css
@@ -127,7 +127,6 @@ a:hover, a:focus, a:active {
     background-size: 100% 0.1em;
 }
 
-
 .products {
     display: flex;
     flex-wrap: wrap;
@@ -135,6 +134,8 @@ a:hover, a:focus, a:active {
     color: white;
     justify-content: center;
     padding-top: 2rem;
+        padding-top: 7rem;
+
 }
 
 .product-listing{
@@ -154,7 +155,8 @@ header {
     font-size: 1.5rem;
     justify-content: left;
     max-width: 78%;
-    padding-top: 7rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .listing-header h4 {
@@ -175,7 +177,7 @@ header {
 .product-info {
     display: flex;
     min-height: 100vh;
-    border-bottom: 1px solid white;
+    border-bottom: 0.05rem solid white;
     margin-bottom: 6rem;
 }
 
@@ -194,7 +196,7 @@ header {
     width: 55%;
     margin: 0;
     padding: 0;
-    border-left: 1px solid white;
+    border-left: 0.05rem solid white;
     align-self: stretch;
 }
 
@@ -230,12 +232,12 @@ header {
     height: 100%;
     object-fit: cover;
     display: block;
-    border-top: 1px solid white;
+    border-top: 0.05rem solid white;
 }
 
 .product-details {
     margin-top: 2rem;
-    border-top: 1px solid white;
+    border-top: 0.05rem solid white;
 }
 
 .product-details p {
@@ -246,11 +248,59 @@ header {
 }
 
 .detail {
-    padding-left: 3rem;
-    padding-right: 3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+/* Cart page stuff */
+
+
+.cart-info {
+    display: flex;
+    min-height: 100vh;
+    border-bottom: 0.05rem solid white;
+    margin-bottom: 6rem;
+}
+
+.cart-listing {
+    width: 65%;
+    padding-top: 6rem;
+    border-right: 0.05rem solid white;
+}
+
+.cart-listing .listing-header {
+    padding-left: 3rem;
+}
+
+.cart-item {
+    padding-left: 3rem;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+}
+
+.cart-overview {    
+    width: 40%;
+    padding-top: 6rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
+
+.cart-detail {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart-overview h2 {
+    padding-top: 1rem;
+    padding-bottom: 4rem;
+}
+
+.cart-button {
+    margin-bottom: 4rem;
 }
 
 @media (max-width: 55em) {
@@ -262,13 +312,29 @@ header {
         order: -1;
         width: 100vw;
         border-left: none;
-        border-bottom: 1px solid white;
+        border-bottom: 0.05rem solid white;
     }
 
     .text-container {
         padding-top: 3rem;
         max-width: 100%;
     }
+
+    .cart-info {
+        flex-direction: column;
+    }
+
+    .cart-listing {
+        width: 100%;
+        border-right: none;
+    }
+
+    .cart-overview { 
+        width: 80%;   
+        padding-right: 3rem;
+        padding-left: 3rem;
+    }
+
 }
 
 
